service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: http-service
spec:
  selector:
    app.kubernetes.io/name: webserver
  ports:
    - protocol: TCP
      port: 8080
