ingressroute.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: about-me
spec:
  host: about-me.apps-crc.testing
  path: /
  to:
    name: http-service
    weight: 100
    kind: Service
  port:
    targetPort: 8080
